--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -34,7 +34,11 @@
             "styles": [
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [],
+            "allowedCommonJsDependencies": [
+              "jspdf",
+              "html2canvas"
+            ]
           },
           "configurations": {
             "production": {
