--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,8 @@
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
     "file-saver": "^2.0.5",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
     "lucide-angular": "^0.511.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -29,7 +31,9 @@
     "@angular/cli": "^18.2.0",
     "@angular/compiler-cli": "^18.2.0",
     "@types/file-saver": "^2.0.7",
+    "@types/html2canvas": "^1.0.0",
     "@types/jasmine": "~5.1.0",
+    "@types/jspdf": "^2.0.0",
     "autoprefixer": "^10.4.21",
     "jasmine-core": "~5.2.0",
     "karma": "~6.4.0",
