New build for deploy

--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -29,6 +29,11 @@
               {
                 "glob": "**/*",
                 "input": "public"
+              },
+              {
+                "glob": "static.json",
+                "input": "src",
+                "output": "/"
               }
             ],
             "styles": [
